Fixed too small space between checkbox and label

--- a/src/components/forms/_checkbox.scss
+++ b/src/components/forms/_checkbox.scss
@@ -19,7 +19,7 @@
     // Unchecked
     &__label {
         display: block;
-        padding: 0 0 0 20px;
+        padding: 0 0 0 24px;
         cursor: pointer;
 
         &:before {
